# pyturb

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  gpu.yml  release.yml
benchmarks/: RESULTS.md  bench_compare.py  bench_frames.py  bench_suite.py
benchmarks/artifacts/: v1.0.0-reference.json
docs/: api.md  comparison.md  concepts.md  index.md  interop.md  quickstart.md  validation.md
examples/: 01_screens.py  02_closed_loop.py  03_layered_atmosphere.py  04_off_axis.py  05_gpu_benchmark.py  06_keck_showcase.py  atmosphere.py  quickstart.py
src/pyturb/: __init__.py  _accel.py  analysis.py  atmosphere.py  backend.py  benchmark.py  config.py  extrude.py  flow.py  fourier.py  infinite.py  io.py  profiles.py  ring.py  utils.py
tests/: conftest.py  test_accel.py  test_analysis.py  test_atmosphere.py  test_backend_utils.py  test_benchmark.py  test_extrude.py  test_fourier.py  test_infinite.py  test_io.py  test_profiles.py
validation/: validate.py
