[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyturb"
version = "0.2.0"
description = "Fast, GPU-optional atmospheric phase screens for adaptive optics."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jacob Taylor", email = "jacobataylor7@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
]
keywords = [
    "adaptive-optics",
    "atmosphere",
    "turbulence",
    "phase-screen",
    "kolmogorov",
    "von-karman",
    "astronomy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/jacotay7/pyturb"
Issues = "https://github.com/jacotay7/pyturb/issues"

[project.optional-dependencies]
cuda11 = ["cupy-cuda11x"]
cuda12 = ["cupy-cuda12x"]
# Optional Numba JIT acceleration of the CPU frozen-flow hot paths (spectral
# layer sum, extruder bicubic readout). pyturb runs without it (NumPy
# fallback); with it the CPU frame rate is several times higher.
accel = ["numba>=0.58"]
test = ["pytest>=7", "pytest-cov", "numba>=0.58"]
fits = ["astropy>=5"]
plot = ["matplotlib>=3.5"]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.24"]
# Third-party libraries used only by benchmarks/bench_compare.py for the
# head-to-head comparison; not needed to use pyturb.
compare = ["aotools", "soapy", "hcipy"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyturb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: test needs a CUDA GPU + CuPy; skipped unless run with --run-gpu.",
]

[tool.ruff]
line-length = 90
target-version = "py39"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, flake8-bugbear.
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402"]
"validation/*" = ["E402"]
# The immediately-consumed timing lambdas intentionally close over loop vars.
"benchmarks/*" = ["E402", "B023"]
